--- a/tests/integration/navigation/base-tests.html
+++ b/tests/integration/navigation/base-tests.html
@@ -23,8 +23,8 @@
 
 
 	<link rel="stylesheet" href="../../../../../css/themes/default/jquery.mobile.css"/>
-	<link rel="stylesheet" href="../../../../../external/qunit.css"/>
-	<script src="../../../../../external/qunit.js"></script>
+	<link rel="stylesheet" href="../../../../../vendor/qunit/qunit.css"/>
+	<script src="../../../../../vendor/qunit/qunit.js"></script>
 	<script type="text/javascript">
 		$.testHelper.setPushState();
 	</script>
