--- a/tests/integration/navigation/method/index.html
+++ b/tests/integration/navigation/method/index.html
@@ -9,7 +9,7 @@
 	<script src="../../../../js/jquery.tag.inserter.js"></script>
 	<script src="../../../../tests/jquery.testHelper.js"></script>
 	<script src="../../../../vendor/qunit/qunit.js"></script>
-	<link rel="stylesheet" href="../../../../../external/qunit.css"/>
+	<link rel="stylesheet" href="../../../../../vendor/qunit/qunit.css"/>
 	<script>
 		$.testHelper.asyncLoad([
 			[ "navigation/method" ],
