--- a/tests/integration/toolbar/index.html
+++ b/tests/integration/toolbar/index.html
@@ -14,7 +14,8 @@
 	<script>
 		$.testHelper.asyncLoad([
 			[
-				"widgets/toolbar"
+				"widgets/toolbar",
+				"jquery.mobile.buttonMarkup"
 			],
 			[ "jquery.mobile.init" ],
 			[ "toolbar_core.js" ]
@@ -35,7 +36,11 @@
 </ol>
 
 <div data-nstest-role="page">
-	<div data-role="content">
+	<div data-nstest-role="header" id="start-page-header">
+		<a href="#">Left Link</a>
+		<a href="#" data-nstest-role="none">Right Link</a>
+	</div>
+	<div class="ui-content">
 		<a href="#page2" id="go-to-page2">Go</a>
 	</div>
 </div>
